Update Jenkinsfile - updated withEnv & tools